Optimize ECMA48Terminal with Java 21 features: switch expressions, Set.of(), extract helpers
Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>